# X-downoland

./: .gitignore  README.md  pyproject.toml  run.sh  x_downoland.spec  x_scraper.py
.github/workflows/: build-windows.yml
