[project]
name = "x-downoland"
version = "0.1.0"
description = "Pobieracz zdjęć z X.com (Twitter) z GUI"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "browser-cookie3>=0.19.1",
]

[project.scripts]
x-downoland = "x_scraper:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["x_scraper"]
